--- a/beats.html
+++ b/beats.html
@@ -11,6 +11,9 @@
     <body class="beats">
 
         <navbar id="nav">
+            <div>
+                <span class="toggle-menu">=</span>   
+            </div>
             <div class="nav-item">
                 <a href="index.html" target="_self" style="color:#2D2926FF">Main</a>
             </div>
