--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <navbar id="nav">
             <div>
-                <span class="toggle-menu">=</span>   
+                <span class="toggle-menu-active"><></span>   
             </div>
             <div class="nav-item">
                 <a href="index.html" target="_self" style="color:#2D2926FF">Main</a>
